# rs-webserver-py-client

./: Cargo.toml  client.py  commands.txt  input.txt  main.py  manifest.json
cache/: index.html
client/: client.py  commands.txt  manifest.json
logs_tests/: serverlog_with_siege.txt  siege_results.txt
py-client/: client.py  manifest.json
src/lib/: http_magic.rs  lib.rs  utils.rs
srv/www/: 201.html  404.html  405.html  409.html
