[package]
name = "rs-webserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "libwebs"
path = "src/lib/lib.rs"

[[bin]]
name = "rs-webserver"
path = "src/bin/main.rs"

[dependencies]
httparse = "1.7.1"
